--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,9 @@
     </properties>
 	
 	 <modules>
-        <module>demo</module>
+         <module>demo</module>
+         <module>app</module>
+         <module>libs</module>
     </modules>
 	
     <dependencies>  
