--- a/libs/pom.xml
+++ b/libs/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>dy-web</module>
+        <module>dy-mybatis</module>
     </modules>
 
 
