--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
          <module>demo</module>
          <module>demo-with-mybatis</module>
          <module>demo-with-admin</module>
+         <module>demo-with-usercenter</module>
          <module>libs</module>
     </modules>
 	
