--- a/libs/pom.xml
+++ b/libs/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>dy-web</module>
         <module>dy-mybatis</module>
+        <module>user-center</module>
     </modules>
 
 
