--- a/v2-template/pom.xml
+++ b/v2-template/pom.xml
@@ -9,10 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demos2</artifactId>
+    <artifactId>v2-template</artifactId>
     <packaging>pom</packaging>
     <modules>
-<!--        <module>OpenFeign</module>-->
+        <module>tpl01-simple-web</module>
     </modules>
 
 
